--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   
   <title>!DOCTYPEd</title>>
   <meta charset="utf-8" /> 
-  <link rel="stylesheet" href="somefronts.css">
+  <script>/* Google analitycs*/</script>
 </head>
 
 <body>  
