Yandex Mettika in metrika

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>!DOCTYPEd</title>>
   <meta charset="utf-8" /> 
   
-  <script>/*Yandex Metrika*/</script>
+  <script>/*Yandex Metrika1*/</script>
 </head>
 
 <body>  
